--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
    <head>
-  </head>
+<meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>IT 8-A</title>
+    <link rel="stylesheet" href="style.css" />
+   </head>
   <body>
     <header>
       <h1>Мирошниченко Андрій 8-А</>
