--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
    </head>
   <body>
     <header>
-      <h1>Мирошниченко Андрій 8-А</>
+      <h1>Мирошниченко Андрій 8-А</h1>
+      <nav>
+        <a href="https://lopokihe.github.io/IT-8-A/"
+          class="about">Головна</a>
+        <a href=""
+          class="menu"
+          >ЗАЛ №23</a>
+        <a href=""
+          class="workers"
+          >Відеогалерея</a>
+        <a href=""
+          class="workers"
+          >Беспечний простір</a>
+        <a href=""
+          class="workers"
+          >Автор сайту</a>
+        <a href=""
+          class="workers"
+          >Гаджети</a>
+      </nav>
     </header>
     <main>
       <h2>
