--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
       <nav>
         <a href="https://lopokihe.github.io/IT-8-A/"
           class="about">Головна</a>
-        <a href=""
+        <a href="https://lopokihe.github.io/IT-8-B/"
           class="menu"
           >ЗАЛ №23</a>
-        <a href=""
+        <a href="https://lopokihe.github.io/IT-8-C/"
           class="workers"
           >Відеогалерея</a>
-        <a href=""
+        <a href="https://lopokihe.github.io/IT-8-D/"
           class="workers"
           >Беспечний простір</a>
-        <a href=""
+        <a href="https://lopokihe.github.io/IT-8-E/"
           class="workers"
           >Автор сайту</a>
-        <a href=""
+        <a href="https://lopokihe.github.io/IT-8-G/"
           class="workers"
           >Гаджети</a>
       </nav>
